[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Theme/goblin_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/overlay.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/ui_icons/settings_cog.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/default.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Prefabs/button_style_box_gen.tres" type="StyleBox" id=5]
[ext_resource path="res://Assets/Images/ui_icons/wood.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/ui_icons/rock.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/ui_icons/gold.png" type="Texture" id=8]
[ext_resource path="res://Assets/Images/ui_icons/food.png" type="Texture" id=9]
[ext_resource path="res://Assets/Images/ui_icons/population.png" type="Texture" id=10]
[ext_resource path="res://Assets/Images/ui_icons/egg.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 4 )

[node name="overlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="top_menu" type="HBoxContainer" parent="."]
anchor_right = 1.0
alignment = 2

[node name="settings_button" type="TextureButton" parent="top_menu"]
margin_left = 992.0
margin_right = 1024.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 3 )
expand = true

[node name="options_menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -150.0
margin_right = 256.0
margin_bottom = 150.0
rect_min_size = Vector2( 512, 300 )
custom_constants/separation = 10
alignment = 1

[node name="resume_button" type="Button" parent="options_menu"]
margin_top = 84.0
margin_right = 512.0
margin_bottom = 145.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 1 )
text = "Resume"

[node name="quit_button" type="Button" parent="options_menu"]
margin_top = 155.0
margin_right = 512.0
margin_bottom = 216.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 1 )
text = "Quit"

[node name="bottom_menu" type="Tree" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -47.0
custom_styles/bg = ExtResource( 5 )

[node name="bottom_menu_list" type="VBoxContainer" parent="bottom_menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -396.0
margin_top = -16.0
margin_right = 396.0
margin_bottom = 16.0

[node name="resources" type="HBoxContainer" parent="bottom_menu/bottom_menu_list"]
margin_right = 792.0
margin_bottom = 32.0
custom_constants/separation = 1

[node name="wood" type="HBoxContainer" parent="bottom_menu/bottom_menu_list/resources"]
margin_right = 131.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="icon" type="TextureRect" parent="bottom_menu/bottom_menu_list/resources/wood"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 6 )
expand = true

[node name="value" type="Label" parent="bottom_menu/bottom_menu_list/resources/wood"]
margin_left = 42.0
margin_top = 2.0
margin_right = 56.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="stone" type="HBoxContainer" parent="bottom_menu/bottom_menu_list/resources"]
margin_left = 132.0
margin_right = 263.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="icon" type="TextureRect" parent="bottom_menu/bottom_menu_list/resources/stone"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 7 )
expand = true

[node name="value" type="Label" parent="bottom_menu/bottom_menu_list/resources/stone"]
margin_left = 42.0
margin_top = 2.0
margin_right = 56.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="gold" type="HBoxContainer" parent="bottom_menu/bottom_menu_list/resources"]
margin_left = 264.0
margin_right = 395.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="icon" type="TextureRect" parent="bottom_menu/bottom_menu_list/resources/gold"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 8 )
expand = true

[node name="value" type="Label" parent="bottom_menu/bottom_menu_list/resources/gold"]
margin_left = 42.0
margin_top = 2.0
margin_right = 56.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="food" type="HBoxContainer" parent="bottom_menu/bottom_menu_list/resources"]
margin_left = 396.0
margin_right = 527.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="icon" type="TextureRect" parent="bottom_menu/bottom_menu_list/resources/food"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 9 )
expand = true

[node name="value" type="Label" parent="bottom_menu/bottom_menu_list/resources/food"]
margin_left = 42.0
margin_top = 2.0
margin_right = 56.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="population" type="HBoxContainer" parent="bottom_menu/bottom_menu_list/resources"]
margin_left = 528.0
margin_right = 659.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="icon" type="TextureRect" parent="bottom_menu/bottom_menu_list/resources/population"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 10 )
expand = true

[node name="value" type="Label" parent="bottom_menu/bottom_menu_list/resources/population"]
margin_left = 42.0
margin_top = 2.0
margin_right = 56.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="eggs" type="HBoxContainer" parent="bottom_menu/bottom_menu_list/resources"]
margin_left = 660.0
margin_right = 792.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="icon" type="TextureRect" parent="bottom_menu/bottom_menu_list/resources/eggs"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 11 )
expand = true

[node name="value" type="Label" parent="bottom_menu/bottom_menu_list/resources/eggs"]
margin_left = 42.0
margin_top = 2.0
margin_right = 56.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "0"

[connection signal="pressed" from="top_menu/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="options_menu/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="options_menu/quit_button" to="." method="_on_quit_button_pressed"]
